--- a/MattEland.BasementsAndBasilisks.ConsoleApp/appsettings.json
+++ b/MattEland.BasementsAndBasilisks.ConsoleApp/appsettings.json
@@ -1,5 +1,5 @@
 {
     "AzureOpenAiKey": "SetInUserSecrets",
     "AzureOpenAiEndpoint": "SetInUserSecrets",
-    "AzureOpenAiDeploymentName": "gpt-35-turbo"
+    "AzureOpenAiDeploymentName": "gpt-4o-mini"
 }
