Adding in Storage

--- a/MattEland.BasementsAndBasilisks.ConsoleApp/appsettings.json
+++ b/MattEland.BasementsAndBasilisks.ConsoleApp/appsettings.json
@@ -1,4 +1,6 @@
 {
+    "AzureStorageKey": "SetInUserSecrets",
+    "AzureStorageEndpoint": "SetInUserSecrets",
     "AzureOpenAiKey": "SetInUserSecrets",
     "AzureOpenAiEndpoint": "SetInUserSecrets",
     "AzureOpenAiDeploymentName": "gpt-4o-mini"
