--- a/MattEland.BasementsAndBasilisks/MattEland.BasementsAndBasilisks.csproj
+++ b/MattEland.BasementsAndBasilisks/MattEland.BasementsAndBasilisks.csproj
@@ -7,6 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Azure.Data.Tables" Version="12.9.1" />
+      <PackageReference Include="Azure.Storage.Blobs" Version="12.23.0" />
       <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.0" />
       <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.0" />
       <PackageReference Include="Microsoft.SemanticKernel" Version="1.30.0" />
