--- a/MattEland.BasementsAndBasilisks.ConsoleApp/appsettings.json
+++ b/MattEland.BasementsAndBasilisks.ConsoleApp/appsettings.json
@@ -1,6 +1,6 @@
 {
-    "AzureStorageKey": "SetInUserSecrets",
-    "AzureStorageEndpoint": "SetInUserSecrets",
+    "AzureStorageTableConnectionString": "SetInUserSecrets",
+    "AdventuresTableName": "adventures",
     "AzureOpenAiKey": "SetInUserSecrets",
     "AzureOpenAiEndpoint": "SetInUserSecrets",
     "AzureOpenAiDeploymentName": "gpt-4o-mini"
