--- a/MattEland.BasementsAndBasilisks/MattEland.BasementsAndBasilisks.csproj
+++ b/MattEland.BasementsAndBasilisks/MattEland.BasementsAndBasilisks.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
@@ -9,6 +9,7 @@
     <ItemGroup>
       <PackageReference Include="Azure.Data.Tables" Version="12.9.1" />
       <PackageReference Include="Azure.Storage.Blobs" Version="12.23.0" />
+      <PackageReference Include="Azure.Storage.Common" Version="12.22.0" />
       <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.0" />
       <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.0" />
       <PackageReference Include="Microsoft.SemanticKernel" Version="1.30.0" />
@@ -16,6 +17,7 @@
       <PackageReference Include="Serilog.Extensions.Logging" Version="8.0.0" />
       <PackageReference Include="Serilog.Formatting.Compact" Version="3.0.0" />
       <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
+      <PackageReference Include="System.Linq.Async" Version="6.0.1" />
     </ItemGroup>
 
 </Project>
