--- a/MattEland.BasementsAndBasilisks/MattEland.BasementsAndBasilisks.csproj
+++ b/MattEland.BasementsAndBasilisks/MattEland.BasementsAndBasilisks.csproj
@@ -13,6 +13,7 @@
       <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.0" />
       <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.0" />
       <PackageReference Include="Microsoft.SemanticKernel" Version="1.30.0" />
+      <PackageReference Include="Microsoft.SemanticKernel.Agents.Core" Version="1.31.0-alpha" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="Serilog" Version="4.1.0" />
       <PackageReference Include="Serilog.Extensions.Logging" Version="8.0.0" />
