Added DALL-E Skill

--- a/MattEland.BasementsAndBasilisks.ConsoleApp/appsettings.json
+++ b/MattEland.BasementsAndBasilisks.ConsoleApp/appsettings.json
@@ -2,5 +2,7 @@
     "AzureStorageConnectionString": "SetInUserSecrets",
     "AzureOpenAiKey": "SetInUserSecrets",
     "AzureOpenAiEndpoint": "SetInUserSecrets",
-    "AzureOpenAiDeploymentName": "gpt-4o-mini"
+    "AzureOpenAiChatDeploymentName": "gpt-4o-mini",
+    "AzureOpenAiEmbeddingDeploymentName": "text-embedding-3-small",
+    "AzureOpenAiImageDeploymentName": "dall-e-3"
 }
