Productivity boost from saved username / hash

--- a/MattEland.DigitalDungeonMaster.ConsoleApp/appsettings.json
+++ b/MattEland.DigitalDungeonMaster.ConsoleApp/appsettings.json
@@ -1,5 +1,8 @@
 {
-    /* See NLog.config for logging configuration */
+    "UserInfo": {
+        "Username": null,
+        "PasswordHash": null
+    },
     "AzureResources": {
         "AzureStorageConnectionString": "SetInUserSecrets",
         "AzureOpenAiKey": "SetInUserSecrets",
