API now connecting and observable

--- a/MattEland.DigitalDungeonMaster.WebAPI/appsettings.json
+++ b/MattEland.DigitalDungeonMaster.WebAPI/appsettings.json
@@ -2,8 +2,14 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.SemanticKernel": "Trace"
     }
+  },
+  "AzureResources": {
+    "AzureOpenAiKey": "SetInSecrets",
+    "AzureOpenAiEndpoint": "SetInSecrets",
+    "AzureStorageConnectionString": "SetInSecrets"
   },
   "AllowedHosts": "*"
 }
