--- a/MattEland.DigitalDungeonMaster.WebAPI/MattEland.DigitalDungeonMaster.WebAPI.csproj
+++ b/MattEland.DigitalDungeonMaster.WebAPI/MattEland.DigitalDungeonMaster.WebAPI.csproj
@@ -4,14 +4,17 @@
         <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <UserSecretsId>3b03c983-5ddf-4cfb-8de6-44059b59f10a</UserSecretsId>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.6"/>
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.6" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.0" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\MattEland.DigitalDungeonMaster.ServiceDefaults\MattEland.DigitalDungeonMaster.ServiceDefaults.csproj" />
       <ProjectReference Include="..\MattEland.DigitalDungeonMaster\MattEland.DigitalDungeonMaster.csproj" />
     </ItemGroup>
 
