Logging in to API project

--- a/MattEland.DigitalDungeonMaster.ConsoleApp/appsettings.json
+++ b/MattEland.DigitalDungeonMaster.ConsoleApp/appsettings.json
@@ -3,6 +3,9 @@
         "Username": null,
         "PasswordHash": null
     },
+    "Server": {
+        "BaseUrl": "http://localhost:5098/"
+    },
     "AzureResources": {
         "AzureStorageConnectionString": "SetInUserSecrets",
         "AzureOpenAiKey": "SetInUserSecrets",
