--- a/MattEland.DigitalDungeonMaster.ConsoleApp/MattEland.DigitalDungeonMaster.ConsoleApp.csproj
+++ b/MattEland.DigitalDungeonMaster.ConsoleApp/MattEland.DigitalDungeonMaster.ConsoleApp.csproj
@@ -13,6 +13,7 @@
       <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Diagnostics" Version="9.0.0" />
       <PackageReference Include="NLog" Version="5.3.4" />
       <PackageReference Include="NLog.Config" Version="4.7.15" />
       <PackageReference Include="NLog.Extensions.Logging" Version="5.3.15" />
@@ -30,6 +31,12 @@
 
     <ItemGroup>
       <ProjectReference Include="..\MattEland.DigitalDungeonMaster\MattEland.DigitalDungeonMaster.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="Microsoft.Extensions.Http">
+        <HintPath>..\..\..\.nuget\packages\microsoft.extensions.http\8.0.1\lib\net8.0\Microsoft.Extensions.Http.dll</HintPath>
+      </Reference>
     </ItemGroup>
 
 </Project>
