Compiling now at least.

--- a/MattEland.DigitalDungeonMaster.WebAPI/appsettings.json
+++ b/MattEland.DigitalDungeonMaster.WebAPI/appsettings.json
@@ -11,5 +11,8 @@
     "AzureOpenAiEndpoint": "SetInSecrets",
     "AzureStorageConnectionString": "SetInSecrets"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Registration": {
+    "AllowRegistration": true
+  } 
 }
