--- a/MattEland.DigitalDungeonMaster.WebAPI/MattEland.DigitalDungeonMaster.WebAPI.csproj
+++ b/MattEland.DigitalDungeonMaster.WebAPI/MattEland.DigitalDungeonMaster.WebAPI.csproj
@@ -15,6 +15,8 @@
 
     <ItemGroup>
       <ProjectReference Include="..\MattEland.DigitalDungeonMaster.ServiceDefaults\MattEland.DigitalDungeonMaster.ServiceDefaults.csproj" />
+      <ProjectReference Include="..\MattEland.DigitalDungeonMaster.Services.Azure\MattEland.DigitalDungeonMaster.Services.Azure.csproj" />
+      <ProjectReference Include="..\MattEland.DigitalDungeonMaster.Services\MattEland.DigitalDungeonMaster.Services.csproj" />
       <ProjectReference Include="..\MattEland.DigitalDungeonMaster\MattEland.DigitalDungeonMaster.csproj" />
     </ItemGroup>
 
