Working JWT issuance

--- a/MattEland.DigitalDungeonMaster.WebAPI/appsettings.json
+++ b/MattEland.DigitalDungeonMaster.WebAPI/appsettings.json
@@ -14,5 +14,10 @@
   "AllowedHosts": "*",
   "Registration": {
     "AllowRegistration": true
-  } 
+  },
+  "JwtSettings": {
+    "Issuer": "MattEland.DigitalDungeonMaster",
+    "Audience": "MattEland.DigitalDungeonMaster",
+    "Secret": "ThisSecretShouldBeChangedAndMustBe256BitsOrMore"
+  }
 }
