--- a/MattEland.DigitalDungeonMaster.WebAPI/appsettings.json
+++ b/MattEland.DigitalDungeonMaster.WebAPI/appsettings.json
@@ -18,6 +18,7 @@
   "JwtSettings": {
     "Issuer": "MattEland.DigitalDungeonMaster",
     "Audience": "MattEland.DigitalDungeonMaster",
-    "Secret": "ThisSecretShouldBeChangedAndMustBe256BitsOrMore"
+    "Secret": "ThisSecretShouldBeChangedAndMustBe256BitsOrMore",
+    "TimeoutInHours": 24
   }
 }
