Stubbing out communications

--- a/MattEland.DigitalDungeonMaster/MattEland.DigitalDungeonMaster.csproj
+++ b/MattEland.DigitalDungeonMaster/MattEland.DigitalDungeonMaster.csproj
@@ -16,6 +16,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\MattEland.DigitalDungeonMaster.Services\MattEland.DigitalDungeonMaster.Services.csproj" />
+      <ProjectReference Include="..\MattEland.DigitalDungeonMaster.Shared\MattEland.DigitalDungeonMaster.Shared.csproj" />
     </ItemGroup>
 
 </Project>
