--- a/MattEland.DigitalDungeonMaster.WebAPI/appsettings.json
+++ b/MattEland.DigitalDungeonMaster.WebAPI/appsettings.json
@@ -3,7 +3,8 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
-      "Microsoft.SemanticKernel": "Trace"
+      "Microsoft.SemanticKernel": "Trace",
+      "MattEland": "Trace"
     }
   },
   "AzureResources": {
