--- a/MattEland.DigitalDungeonMaster.WebAPI/appsettings.json
+++ b/MattEland.DigitalDungeonMaster.WebAPI/appsettings.json
@@ -4,6 +4,7 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
       "Microsoft.SemanticKernel": "Trace",
+      "Azure": "Debug",
       "MattEland": "Trace"
     }
   },
@@ -28,7 +29,7 @@
   "Agents": {
     "GameMaster": {
       "Name": "GM",
-      "NewCampaignPrompt": "Hello, Dungeon Master! Please greet me asking me about my player character and the world we're in. I'll provide you with some details to get started. Once I do, give me a good hook to start the play session. A good hook should have something compelling for the player to investigate and complete in the first session and allow room for additional sessions afterwards.",
+      "NewCampaignPrompt": "Hello, Dungeon Master! Please kick things off with a brief orientation to the beginning of the story - where I am, what's going on, and what my current goals might be. Give me some interesting opportunities to explore and interact with the game world.",
       "ResumeCampaignPrompt": "Hello, Dungeon Master! Please greet me with a recap of our last session and ask me what my goals are for this session. Don't act on those goals, just keep them in mind once I tell you what I want to do.",
       "MainPrompt": "You are a dungeon master directing a table top role playing game. The user represents the only player in the game. Let the player make their own decisions, ask for skill checks and saving rolls when needed, and call functions to get your responses as needed. The player wants agency over their own actions and wants to see a setting develop over time. Feel free to use markdown in your responses, but avoid lists. Ask the player what they'd like to do, but avoid railroading them or giving them many suggestions. Make the world interesting and give players opportunities to make interesting choices, use their skills, and interact with the world in meaningful ways. When the player tells you to do something, ask for relevant skill checks and ask clarifying questions as necessary. It's worse to assume the player's intent and make actions for them than it is to ask the player too many questions."
     }
