--- a/MattEland.DigitalDungeonMaster.ConsoleApp/MattEland.DigitalDungeonMaster.ConsoleApp.csproj
+++ b/MattEland.DigitalDungeonMaster.ConsoleApp/MattEland.DigitalDungeonMaster.ConsoleApp.csproj
@@ -16,10 +16,12 @@
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.0" />
       <PackageReference Include="Microsoft.Extensions.Diagnostics" Version="9.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0" />
       <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0" />
       <PackageReference Include="Microsoft.Extensions.Logging.EventLog" Version="9.0.0" />
       <PackageReference Include="Microsoft.Extensions.Logging.EventSource" Version="9.0.0" />
       <PackageReference Include="Microsoft.Extensions.ServiceDiscovery" Version="9.0.0" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="NLog" Version="5.3.4" />
       <PackageReference Include="NLog.Config" Version="4.7.15" />
       <PackageReference Include="NLog.Extensions.Logging" Version="5.3.15" />
