--- a/MattEland.DigitalDungeonMaster.Services.Azure/MattEland.DigitalDungeonMaster.Services.Azure.csproj
+++ b/MattEland.DigitalDungeonMaster.Services.Azure/MattEland.DigitalDungeonMaster.Services.Azure.csproj
@@ -32,6 +32,8 @@
       <PackageReference Include="Azure.Data.Tables" Version="12.9.1" />
       <PackageReference Include="Azure.Storage.Blobs" Version="12.23.0" />
       <PackageReference Include="Azure.Storage.Common" Version="12.22.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.0" />
       <PackageReference Include="System.Linq.Async" Version="6.0.1" />
     </ItemGroup>
 
