--- a/MattEland.DigitalDungeonMaster.WebAPI/MattEland.DigitalDungeonMaster.WebAPI.csproj
+++ b/MattEland.DigitalDungeonMaster.WebAPI/MattEland.DigitalDungeonMaster.WebAPI.csproj
@@ -8,9 +8,12 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Azure.Data.AppConfiguration" Version="1.5.0" />
+        <PackageReference Include="Azure.Identity" Version="1.13.1" />
         <PackageReference Include="Azure.Monitor.OpenTelemetry.AspNetCore" Version="1.2.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.11" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.6" />
+        <PackageReference Include="Microsoft.Azure.AppConfiguration.AspNetCore" Version="8.0.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.0" />
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
         <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.0" />
