--- a/MattEland.DigitalDungeonMaster.AvaloniaApp/MattEland.DigitalDungeonMaster.AvaloniaApp.csproj
+++ b/MattEland.DigitalDungeonMaster.AvaloniaApp/MattEland.DigitalDungeonMaster.AvaloniaApp.csproj
@@ -27,6 +27,7 @@
         <PackageReference Include="Lemon.Hosting.AvaloniauiDesktop" Version="1.0.0" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0" />
         <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.0" />
+        <PackageReference Include="Semi.Avalonia" Version="11.2.1.2" />
     </ItemGroup>
 
     <ItemGroup>
