Busy indicator on login

--- a/MattEland.DigitalDungeonMaster.AvaloniaApp/MattEland.DigitalDungeonMaster.AvaloniaApp.csproj
+++ b/MattEland.DigitalDungeonMaster.AvaloniaApp/MattEland.DigitalDungeonMaster.AvaloniaApp.csproj
@@ -37,4 +37,11 @@
     <ItemGroup>
       <AdditionalFiles Include="Pages\LoginPage.axaml" />
     </ItemGroup>
+
+    <ItemGroup>
+      <Compile Update="Controls\BusySpinner.axaml.cs">
+        <DependentUpon>BusySpinner.axaml</DependentUpon>
+        <SubType>Code</SubType>
+      </Compile>
+    </ItemGroup>
 </Project>
