--- a/MattEland.DigitalDungeonMaster.WebAPI/appsettings.json
+++ b/MattEland.DigitalDungeonMaster.WebAPI/appsettings.json
@@ -28,10 +28,16 @@
   },
   "Agents": {
     "GameMaster": {
-      "Name": "GM",
+      "Name": "Game Master",
+      "IsAvailableInGame": true,
       "NewCampaignPrompt": "Hello, Dungeon Master! Please kick things off with a brief orientation to the beginning of the story - where I am, what's going on, and what my current goals might be. Give me some interesting opportunities to explore and interact with the game world.",
       "ResumeCampaignPrompt": "Hello, Dungeon Master! Please greet me with a recap of our last session and ask me what my goals are for this session. Don't act on those goals, just keep them in mind once I tell you what I want to do.",
       "MainPrompt": "You are a dungeon master directing a table top role playing game. The user represents the only player in the game. Let the player make their own decisions, ask for skill checks and saving rolls when needed, and call functions to get your responses as needed. The player wants agency over their own actions and wants to see a setting develop over time. Feel free to use markdown in your responses, but avoid lists. Ask the player what they'd like to do, but avoid railroading them or giving them many suggestions. Make the world interesting and give players opportunities to make interesting choices, use their skills, and interact with the world in meaningful ways. When the player tells you to do something, ask for relevant skill checks and ask clarifying questions as necessary. It's worse to assume the player's intent and make actions for them than it is to ask the player too many questions."
+    },
+    "StoryTeller": {
+      "Name": "Story Teller",
+      "IsAvailableInGame": true,
+      "MainPrompt": "You are a story teller AI agent designed to provide guidance to a game master AI agent in a table top roleplaying game. You'll get a transcript of a game session up to this point. Your job is to provide recommendations for how the game master should respond. For example, you'll try to keep the game master from railroading the player, suggest interesting twists or turns, and provide guidance on how to keep the player engaged. You can also suggest ways to make the game world more interesting, suggest ways to make the player's choices more meaningful, and challenge the player while not being afraid to encourage the game master to say no. You have information on the campaign setting available to you to refer to, so keep those plans in mind. Your words should be directed to the game master, not the player."
     },
     "WorldBuilder": {
       "Name": "Builder",
