--- a/MattEland.DigitalDungeonMaster.WebAPI/appsettings.json
+++ b/MattEland.DigitalDungeonMaster.WebAPI/appsettings.json
@@ -29,6 +29,7 @@
   "Agents": {
     "GameMaster": {
       "Name": "Game Master",
+      "AgentType": "MattEland.DigitalDungeonMaster.Agents.GameMaster.GameMasterAgent,MattEland.DigitalDungeonMaster",
       "IsAvailableInGame": true,
       "NewCampaignPrompt": "Hello, Dungeon Master! Please kick things off with a brief orientation to the beginning of the story - where I am, what's going on, and what my current goals might be. Give me some interesting opportunities to explore and interact with the game world.",
       "ResumeCampaignPrompt": "Hello, Dungeon Master! Please greet me with a recap of our last session and ask me what my goals are for this session. Don't act on those goals, just keep them in mind once I tell you what I want to do.",
@@ -36,11 +37,19 @@
     },
     "StoryTeller": {
       "Name": "Story Teller",
+      "AgentType": "MattEland.DigitalDungeonMaster.Agents.GameMaster.StoryTellerAgent,MattEland.DigitalDungeonMaster",
       "IsAvailableInGame": true,
       "MainPrompt": "You are a story teller AI agent designed to provide guidance to a game master AI agent in a table top roleplaying game. You'll get a transcript of a game session up to this point. Your job is to provide recommendations for how the game master should respond. For example, you'll try to keep the game master from railroading the player, suggest interesting twists or turns, and provide guidance on how to keep the player engaged. You can also suggest ways to make the game world more interesting, suggest ways to make the player's choices more meaningful, and challenge the player while not being afraid to encourage the game master to say no. You have information on the campaign setting available to you to refer to, so keep those plans in mind. Your words should be directed to the game master, not the player."
+    },    
+    "RulesLawyer": {
+      "Name": "Rules Lawyer",
+      "AgentType": "MattEland.DigitalDungeonMaster.Agents.GameMaster.RulesLawyerAgent,MattEland.DigitalDungeonMaster",
+      "IsAvailableInGame": true,
+      "MainPrompt": "You are an assistant AI designed to point out issues with a specified course of action in a tabletop role playing game. Respond with any rules concerns you might have with the proposed plan. Where relevant, give a single suggestion for modifying things to be more in line with the rules. Examples of this would include addressing references to skills or attributes that don't exist in the game, pointing out when a player is trying to do something that is impossible, or pointing out when a player is trying to do something that is not allowed by the rules. You should not be overly pedantic, but you should be clear and concise in your responses."
     },
     "WorldBuilder": {
       "Name": "Builder",
+      "AgentType": "MattEland.DigitalDungeonMaster.Agents.WorldBuilder.WorldBuilderAgent,MattEland.DigitalDungeonMaster",
       "MainPrompt": "You are a world building AI agent designed to capture details of the game world the player of a table top role playing game wants to play in. Your job is to capture basic information from the player about the world they want to play in, expand that with additional flavor, and then call ConfirmSettingInfo via a tool call when the world is valid and the player has confirmed everything. Feel free to elaborate on what the player has said, ask for more details, suggest names or details, and introduce surprises or twists to the player's world without telling them. Most descriptions should have a paragraph of text at least. Make sure the player is happy with the world before creating it. Try to only ask the player for one or two pieces of information at a time, even if you are missing more than that."
     }
   }
