--- a/MattEland.DigitalDungeonMaster.AspireHost/MattEland.DigitalDungeonMaster.AspireHost.csproj
+++ b/MattEland.DigitalDungeonMaster.AspireHost/MattEland.DigitalDungeonMaster.AspireHost.csproj
@@ -2,11 +2,12 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <IsAspireHost>true</IsAspireHost>
         <UserSecretsId>0f5a283c-df3d-42dc-9e5d-2f79381ee717</UserSecretsId>
+        <LangVersion>default</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
