--- a/MattEland.DigitalDungeonMaster.ConsoleApp/MattEland.DigitalDungeonMaster.ConsoleApp.csproj
+++ b/MattEland.DigitalDungeonMaster.ConsoleApp/MattEland.DigitalDungeonMaster.ConsoleApp.csproj
@@ -2,10 +2,11 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <UserSecretsId>bfc42a53-4dba-47f1-8a15-4f8db40dd75b</UserSecretsId>
+        <LangVersion>default</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
