--- a/MattEland.DigitalDungeonMaster.WebAPI/MattEland.DigitalDungeonMaster.WebAPI.csproj
+++ b/MattEland.DigitalDungeonMaster.WebAPI/MattEland.DigitalDungeonMaster.WebAPI.csproj
@@ -1,10 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <UserSecretsId>3b03c983-5ddf-4cfb-8de6-44059b59f10a</UserSecretsId>
+        <LangVersion>default</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
